--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <footer class="footer">
         <section class="footer__sections">
-            <div class="footer__sections-container container">
+            <di v class="footer__sections-container container">
                
                 <article class="footer__section">
                     <h3 class="footer__section-title">Frutas</h3>
@@ -121,17 +121,17 @@
                         </a>
                     </div>
                     <div class="suscribe__container">
-                        <h3 class="footer__section-title">Suscribete ahora</h3>
+                        <h3 class="footer__section-title">Suscríbete ahora</h3>
                         <form class="suscribe__container-form" action="">
                             <input type="email" class="suscribe__container-input input" placeholder="Ingresa tu correo electrónico">
-                            <a type="submit" class="suscribe__container-button button button-primary suscribe__container-button">
+                            <a type="submit" class="suscribe__container-button button button-primary">
                                 Suscribirme
                             </a>
                         </form>
                     </div>
                 </article>
 
-            </div>
+            </di>
         </section>
         <section class="footer__copy">
             <p class="footer__copy-text" id="copyright">
